--- a/MessageQueues/DataCaptureService/DataCaptureService.csproj
+++ b/MessageQueues/DataCaptureService/DataCaptureService.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Confluent.Kafka" Version="2.1.1-RC1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
