--- a/MessageQueues/MainProcessingService/MainProcessingService.csproj
+++ b/MessageQueues/MainProcessingService/MainProcessingService.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Confluent.Kafka" Version="2.1.1-RC1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
