--- a/AnalyzingAndProfilingTools/ProfileSample/ProfileSample.csproj
+++ b/AnalyzingAndProfilingTools/ProfileSample/ProfileSample.csproj
@@ -136,28 +136,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="DAL\ImgSource.cs">
-      <DependentUpon>MyImgContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DAL\MyImgContext.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyImgContext.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DAL\MyImgContext.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyImgContext.tt</DependentUpon>
-    </Compile>
-    <Compile Include="DAL\MyImgContext.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MyImgContext.edmx</DependentUpon>
-    </Compile>
+    <Compile Include="DAL\ProfileSampleEntities.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ImageModel.cs" />
+    <Compile Include="Models\ImgSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -189,16 +173,6 @@
     <Content Include="Content\Img\Planet Scenes %28273%29.jpg" />
     <Content Include="Content\Img\Planet Scenes %28274%29.jpg" />
     <Content Include="Content\Img\Planet Scenes %28275%29.jpg" />
-    <Content Include="DAL\MyImgContext.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MyImgContext.edmx</DependentUpon>
-      <LastGenOutput>MyImgContext.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="DAL\MyImgContext.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MyImgContext.edmx</DependentUpon>
-      <LastGenOutput>MyImgContext.cs</LastGenOutput>
-    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -211,13 +185,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <EntityDeploy Include="DAL\MyImgContext.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MyImgContext.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="DAL\MyImgContext.edmx.diagram">
-      <DependentUpon>MyImgContext.edmx</DependentUpon>
-    </Content>
     <None Include="Properties\PublishProfiles\profileSample - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
