--- a/AnalyzingAndProfilingTools/ProfileSample/Web.config
+++ b/AnalyzingAndProfilingTools/ProfileSample/Web.config
@@ -79,6 +79,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ProfileSampleEntities" connectionString="metadata=res://*/DAL.MyImgContext.csdl|res://*/DAL.MyImgContext.ssdl|res://*/DAL.MyImgContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=ProfileSample;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="ProfileSampleEntities" connectionString="Server=localhost;Database=ProfileSample;Trusted_Connection=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
